--- a/src/App.css
+++ b/src/App.css
@@ -1,9 +1,12 @@
 .chatbot {
     position: fixed;
     z-index: 1000; 
-    bottom:30px;
+    bottom:0px;
     right:20px;
     cursor: pointer;
-
+}
+.genAI{
+    width:"10vw";
+    height:"10vh";
 
 }
